Fix wrong background of Skills header

--- a/public/less/MySkills.less
+++ b/public/less/MySkills.less
@@ -7,7 +7,7 @@
     display: inline-block;
     position: relative;
     text-align: center;
-    background:lighten(@dark-background-color, 5%);
+    background:lighten(@highlight-background-color, 5%);
     color:@primary-text-color;
     padding:2px 20px;
   }
